# RP6502-TextEditor

./: CMakeLists.txt  README.md  te.rp6502
src/: actions.c  actions.h  button.c  button.h  colors.h  display.c  display.h  doc.c  doc.h  ezpsg.c  file_dlg.c  file_dlg.h  file_ops.c  file_ops.h  keyboard.c  keyboard.h  main.c  menu.c  menu.h  mouse.c  mouse.h  msg_dlg.c  msg_dlg.h  panel.c  panel.h  statusbar.c  statusbar.h  textbox.c  textbox.h
